dashboard-ingress2.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kubernetes-dashboard-ingress-second
  namespace: kubernetes-dashboard
spec:
  rules:
  - host: dashboard.go.tz  # Update this with your actual hostname
    http:
      paths:
      - path: /test
        pathType: Prefix
        backend:
          service:
            name: kubernetes-dashboard
            port:
              number: 80
